--- a/src/app/modules/livro/livro-list/livro-list.component.html
+++ b/src/app/modules/livro/livro-list/livro-list.component.html
@@ -1,1 +1,7 @@
-<h1>Livro List</h1>
+<h1>Livros disponíveis</h1>
+
+<div style="display: flex;">
+    <app-livro></app-livro>
+    <app-livro></app-livro>
+    <app-livro></app-livro>
+</div>
