--- a/src/app/modules/livro/livro-list/livro-list.component.html
+++ b/src/app/modules/livro/livro-list/livro-list.component.html
@@ -1,6 +1,7 @@
 <h1>Livros disponíveis</h1>
 
-<div style="display: flex;">
+<button (click)="adicionar()" >Adicionar Livro</button>
+<div style="display: flex;" style="max-width: 1000px;">
     <app-livro *ngFor="let livro of livros"
         [title]="livro.titulo"
         [description]="livro.description"
