fix nome autor na lista

--- a/src/app/modules/livro/livro/livro.component.html
+++ b/src/app/modules/livro/livro/livro.component.html
@@ -9,8 +9,7 @@
         </div>
         <div class="authors">
             <p *ngFor="let author of authors" class="author">
-                {{author.nome}} <br />
-                {{author.idade}}
+                {{author}}
             </p>
         </div>
     </div>
